--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 terminal.innerHTML += "\n> ENTERED SYSTEM...\n";
                 terminal.scrollTop = terminal.scrollHeight;
                 setTimeout(() => {
-                    window.location.href = "https://r.mtdv.me/CdOev6-dvq";
+                    window.location.href = "https://r.mtdv.me/SQwHJ0CnvJ";
                 }, 2000); // Rickroll na 2 seconden
             } else {
                 if (codeIndex >= codeSnippets.length) {
