--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Hack Systeem</h1>
+    <h1>Hack System</h1>
     <div id="terminal"></div>
     <p>Press ENTER to enter system...</p>
     
