--- a/index.html
+++ b/index.html
@@ -12,22 +12,31 @@
             padding: 20px;
             text-align: center;
         }
+
         #terminal {
             width: 80%;
             height: 300px;
             background: black;
             border: 1px solid green;
             padding: 10px;
-            overflow-y: auto;
             margin: 20px auto;
-            text-align: left;
+            overflow-y: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
             white-space: pre-wrap;
+        }
+
+        #terminal-content {
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <h1>Hack System</h1>
-    <div id="terminal"></div>
+    <div id="terminal"><div id="terminal-content"></div></div>
     <p>Press ENTER to enter system...</p>
     
     <script>
@@ -46,20 +55,21 @@
         ];
 
         let terminal = document.getElementById("terminal");
+        let terminalContent = document.getElementById("terminal-content");
         let codeIndex = 0;
 
         document.addEventListener("keydown", function(event) {
             if (event.key === "Enter") {
-                terminal.innerHTML += "\n> ENTERED SYSTEM...\n";
+                terminalContent.innerHTML += "\n> ENTERED SYSTEM...\n";
                 terminal.scrollTop = terminal.scrollHeight;
                 setTimeout(() => {
                     window.location.href = "https://r.mtdv.me/SQwHJ0CnvJ";
-                }, 2000); // Rickroll na 2 seconden
+                }, 2000);
             } else {
                 if (codeIndex >= codeSnippets.length) {
                     codeIndex = 0;
                 }
-                terminal.innerHTML += codeSnippets[codeIndex] + "\n";
+                terminalContent.innerHTML += codeSnippets[codeIndex] + "\n";
                 terminal.scrollTop = terminal.scrollHeight;
                 codeIndex++;
             }
